--- a/Due-Dates/Base.lproj/Main.storyboard
+++ b/Due-Dates/Base.lproj/Main.storyboard
@@ -82,6 +82,7 @@
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="S4F-HP-8ot" id="n1E-Xn-2rI"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="X44-Ya-AuC"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -223,10 +224,20 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDh-kO-raK">
-                                <rect key="frame" x="276" y="487" width="49" height="30"/>
+                                <rect key="frame" x="269" y="486" width="62" height="30"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="62" id="toE-dj-cBV"/>
+                                </constraints>
                                 <state key="normal" title="Submit">
+                                    <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="submitButtonTapped:" destination="UfH-59-tyc" eventType="touchUpInside" id="mDY-U2-2rD"/>
                                 </connections>
@@ -248,7 +259,7 @@
                             <constraint firstItem="BSG-XQ-5Sn" firstAttribute="top" secondItem="qDX-LN-Vd3" secondAttribute="bottom" constant="8" id="b8Y-bs-q53"/>
                             <constraint firstItem="Nrz-Wb-Wjz" firstAttribute="top" secondItem="n9h-jd-RAD" secondAttribute="bottom" constant="8" id="cdx-hp-oBn"/>
                             <constraint firstItem="qDX-LN-Vd3" firstAttribute="leading" secondItem="PzE-wj-WDl" secondAttribute="leadingMargin" id="oi1-JO-bdZ"/>
-                            <constraint firstItem="z84-kG-hRP" firstAttribute="top" secondItem="bDh-kO-raK" secondAttribute="bottom" constant="83" id="pVc-0b-Bc6"/>
+                            <constraint firstItem="z84-kG-hRP" firstAttribute="top" secondItem="bDh-kO-raK" secondAttribute="bottom" constant="84" id="pVc-0b-Bc6"/>
                             <constraint firstItem="MSh-CE-ELF" firstAttribute="top" secondItem="H4i-h8-Qso" secondAttribute="bottom" constant="8" id="qQ6-jc-MZe"/>
                             <constraint firstItem="Nrz-Wb-Wjz" firstAttribute="leading" secondItem="PzE-wj-WDl" secondAttribute="leadingMargin" id="r3q-hO-Wt2"/>
                             <constraint firstItem="n9h-jd-RAD" firstAttribute="leading" secondItem="PzE-wj-WDl" secondAttribute="leadingMargin" id="wJF-JF-lvd"/>
@@ -277,7 +288,7 @@
         <!--Homework-->
         <scene sceneID="ywp-al-u2k">
             <objects>
-                <viewController id="NaT-XK-zvn" sceneMemberID="viewController">
+                <viewController id="NaT-XK-zvn" customClass="HomeworkEntryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VjX-mh-iqu"/>
                         <viewControllerLayoutGuide type="bottom" id="Xrn-Wn-ucH"/>
@@ -285,9 +296,62 @@
                     <view key="view" contentMode="scaleToFill" id="vW3-qv-up8">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many questions are there?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sam-ni-fTL">
+                                <rect key="frame" x="153" y="95" width="295" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="295" id="DRR-re-U7b"/>
+                                    <constraint firstAttribute="height" constant="21" id="fHs-zk-0BQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNL-V2-t5C">
+                                <rect key="frame" x="269" y="205" width="62" height="30"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="1XE-Tm-5Bw"/>
+                                    <constraint firstAttribute="width" constant="62" id="IoU-W4-vk1"/>
+                                </constraints>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="submitButtonTapped:" destination="NaT-XK-zvn" eventType="touchUpInside" id="HJg-wX-lZB"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of questions" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M8r-s6-Uoi">
+                                <rect key="frame" x="223" y="148" width="155" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="YHg-E6-dtV"/>
+                                    <constraint firstAttribute="width" constant="155" id="teN-Ft-y9U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Sam-ni-fTL" firstAttribute="top" secondItem="VjX-mh-iqu" secondAttribute="bottom" constant="31" id="4PM-vw-41Q"/>
+                            <constraint firstAttribute="centerX" secondItem="Sam-ni-fTL" secondAttribute="centerX" constant="-0.5" id="AOD-Vg-Rei"/>
+                            <constraint firstAttribute="centerX" secondItem="TNL-V2-t5C" secondAttribute="centerX" id="Hti-rV-dgP"/>
+                            <constraint firstItem="TNL-V2-t5C" firstAttribute="top" secondItem="M8r-s6-Uoi" secondAttribute="bottom" constant="27" id="N9e-Dn-aIs"/>
+                            <constraint firstItem="M8r-s6-Uoi" firstAttribute="top" secondItem="Sam-ni-fTL" secondAttribute="bottom" constant="32" id="afa-eq-IPp"/>
+                            <constraint firstAttribute="centerX" secondItem="M8r-s6-Uoi" secondAttribute="centerX" constant="-0.5" id="eTm-5c-twz"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Homework" id="9HZ-Ed-Uds"/>
+                    <connections>
+                        <outlet property="numberOfQuestionsTextField" destination="M8r-s6-Uoi" id="cvm-v0-doF"/>
+                        <outlet property="submitButton" destination="TNL-V2-t5C" id="pGt-ES-uMy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0eR-65-HVt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -369,7 +433,7 @@
             </objects>
             <point key="canvasLocation" x="4203" y="-5"/>
         </scene>
-        <!--Essay-->
+        <!--Essay/Paper-->
         <scene sceneID="k6a-f5-sRJ">
             <objects>
                 <viewController id="shT-72-VDa" sceneMemberID="viewController">
@@ -380,9 +444,30 @@
                     <view key="view" contentMode="scaleToFill" id="2gP-Ud-yh5">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r5Z-Xk-Z1B">
+                                <rect key="frame" x="16" y="72" width="568" height="143"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="MyP-1S-JgG">
+                                        <rect key="frame" x="0.0" y="0.0" width="568" height="143"/>
+                                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                                        <prototypes>
+                                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="oBS-YR-mIh">
+                                                <rect key="frame" x="0.0" y="0.0" width="568" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oBS-YR-mIh" id="zsx-IJ-0Db">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Essay" id="3xe-2a-KxZ"/>
+                    <navigationItem key="navigationItem" title="Essay/Paper" id="3xe-2a-KxZ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y4F-CK-yGM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
